<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <View
        android:id="@+id/viewLogo"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:background="@color/purple_200"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/msgName"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvApplication"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/edtGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/msgGender"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="text"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/edtOld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/msgOld"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtGender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="number"
        app:layout_constraintVertical_bias="0.05"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/msgEmail"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtOld"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:inputType="textEmailAddress"
        app:layout_constraintVertical_bias="0.05"
        />
    <CheckBox
        android:id="@+id/cbCondiciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Acepto los terminos y condiciones."
        app:layout_constraintVertical_bias="0.10"
        android:checked="true"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:onClick="Registrar"
        android:text="@string/msgLogin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbCondiciones"

        app:layout_constraintVertical_bias="0.05" />

    <Button
        android:id="@+id/btnCancel"
        android:onClick="Cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/msgCancel"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PRIMER EXAMEN PARCIAL"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/viewLogo"
        app:layout_constraintEnd_toEndOf="@+id/viewLogo"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="@+id/viewLogo"
        app:layout_constraintTop_toTopOf="@+id/viewLogo" />

    <TextView
        android:id="@+id/tvMyName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Gerardo Jose Villeda Erazo"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

    <TextView
        android:id="@+id/tvApplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="APLICACION DE REGISTRO"
        android:textColor="@color/teal_200"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMyName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.05"/>

</androidx.constraintlayout.widget.ConstraintLayout>